--- a/htaccess/.htaccess
+++ b/htaccess/.htaccess
@@ -1,6 +1,6 @@
 # CIDRAM default signature files converted to htaccess format.
 # Source: https://github.com/CIDRAM/Exports/tree/master/htaccess
-# This file last updated: 2020.06.08
+# This file last updated: 2020.06.11
 #
 Order Allow,Deny
 Deny from 0.0.0.0/8
@@ -13,6 +13,7 @@ Deny from 1.9.167.35/32
 Deny from 1.10.16.0/20
 Deny from 1.10.133.0/24
 Deny from 1.10.186.0/24
+Deny from 1.12.118.0/23
 Deny from 1.19.0.0/16
 Deny from 1.20.99.0/24
 Deny from 1.20.100.0/24
@@ -281,6 +282,8 @@ Deny from 5.45.96.0/19
 Deny from 5.45.176.0/21
 Deny from 5.53.32.0/19
 Deny from 5.53.120.0/21
+Deny from 5.56.32.0/24
+Deny from 5.56.39.0/24
 Deny from 5.56.56.0/21
 Deny from 5.56.133.0/24
 Deny from 5.56.176.0/20
@@ -4184,6 +4187,7 @@ Deny from 37.221.116.0/24
 Deny from 37.221.128.0/19
 Deny from 37.221.160.0/20
 Deny from 37.221.192.0/21
+Deny from 37.221.208.0/21
 Deny from 37.228.112.0/21
 Deny from 37.228.128.0/23
 Deny from 37.228.131.0/24
@@ -5025,7 +5029,7 @@ Deny from 42.159.224.0/19
 Deny from 42.160.0.0/12
 Deny from 42.176.0.0/13
 Deny from 42.184.0.0/15
-Deny from 42.187.150.0/23
+Deny from 42.187.128.0/17
 Deny from 42.190.41.2/32
 Deny from 42.191.230.195/32
 Deny from 42.194.128.0/17
@@ -7142,6 +7146,18 @@ Deny from 47.92.0.0/14
 Deny from 47.96.0.0/12
 Deny from 47.112.0.0/14
 Deny from 47.116.0.0/16
+Deny from 47.139.1.80/32
+Deny from 47.149.64.183/32
+Deny from 47.149.204.229/32
+Deny from 47.149.239.192/32
+Deny from 47.152.202.234/32
+Deny from 47.155.235.20/32
+Deny from 47.156.239.216/32
+Deny from 47.180.53.222/32
+Deny from 47.180.63.37/32
+Deny from 47.198.64.0/23
+Deny from 47.198.66.44/32
+Deny from 47.198.80.211/32
 Deny from 47.226.139.25/32
 Deny from 47.235.0.0/21
 Deny from 47.235.8.0/24
@@ -8677,7 +8693,6 @@ Deny from 62.240.224.0/19
 Deny from 62.241.16.0/24
 Deny from 62.241.24.0/23
 Deny from 62.245.64.0/18
-Deny from 62.248.101.18/32
 Deny from 62.255.142.0/24
 Deny from 63.32.0.0/14
 Deny from 63.78.12.0/22
@@ -9822,6 +9837,7 @@ Deny from 71.40.44.0/24
 Deny from 71.81.84.71/32
 Deny from 71.81.205.57/32
 Deny from 71.85.117.51/32
+Deny from 71.122.164.51/32
 Deny from 71.152.0.0/21
 Deny from 71.152.8.0/22
 Deny from 71.152.13.0/24
@@ -10492,6 +10508,7 @@ Deny from 77.248.0.0/14
 Deny from 77.252.26.62/32
 Deny from 77.253.137.102/32
 Deny from 78.11.32.1/32
+Deny from 78.24.184.0/21
 Deny from 78.24.216.0/21
 Deny from 78.25.112.0/21
 Deny from 78.29.0.0/20
@@ -10606,22 +10623,27 @@ Deny from 78.159.130.0/23
 Deny from 78.159.156.0/24
 Deny from 78.159.160.0/19
 Deny from 78.159.239.0/24
-Deny from 78.161.143.125/32
-Deny from 78.169.129.193/32
-Deny from 78.170.108.100/32
-Deny from 78.183.137.70/32
-Deny from 78.185.104.196/32
+Deny from 78.162.43.253/32
+Deny from 78.162.44.154/32
+Deny from 78.163.15.143/32
+Deny from 78.163.25.118/32
+Deny from 78.171.63.177/32
+Deny from 78.171.75.132/32
+Deny from 78.171.130.85/32
+Deny from 78.176.97.112/32
+Deny from 78.176.98.203/32
 Deny from 78.186.216.216/32
 Deny from 78.188.4.124/32
-Deny from 78.188.7.159/32
 Deny from 78.188.61.165/32
+Deny from 78.188.65.105/32
 Deny from 78.188.110.156/32
 Deny from 78.188.203.252/32
 Deny from 78.188.217.135/32
 Deny from 78.188.225.197/32
 Deny from 78.189.203.182/32
-Deny from 78.190.157.130/32
-Deny from 78.190.183.57/32
+Deny from 78.189.231.24/32
+Deny from 78.190.178.49/32
+Deny from 78.190.184.80/32
 Deny from 78.192.0.0/10
 Deny from 79.1.35.208/32
 Deny from 79.8.86.148/32
@@ -11042,11 +11064,7 @@ Deny from 81.46.192.0/19
 Deny from 81.46.224.0/20
 Deny from 81.46.240.0/21
 Deny from 81.56.0.0/15
-Deny from 81.68.0.0/23
-Deny from 81.70.10.0/23
-Deny from 81.70.128.0/23
-Deny from 81.70.250.0/23
-Deny from 81.71.100.0/23
+Deny from 81.68.0.0/14
 Deny from 81.89.0.0/20
 Deny from 81.89.125.0/24
 Deny from 81.89.127.0/24
@@ -11114,9 +11132,10 @@ Deny from 81.200.128.0/23
 Deny from 81.201.16.0/20
 Deny from 81.210.128.0/17
 Deny from 81.211.0.0/17
-Deny from 81.214.104.101/32
-Deny from 81.214.105.111/32
-Deny from 81.215.235.114/32
+Deny from 81.214.107.166/32
+Deny from 81.215.75.250/32
+Deny from 81.215.234.149/32
+Deny from 81.215.237.205/32
 Deny from 81.218.0.0/16
 Deny from 81.222.0.0/18
 Deny from 81.222.64.0/19
@@ -11530,12 +11549,17 @@ Deny from 85.95.232.0/22
 Deny from 85.95.236.0/24
 Deny from 85.95.245.0/24
 Deny from 85.95.248.0/21
-Deny from 85.105.34.128/32
+Deny from 85.103.106.178/32
+Deny from 85.104.211.130/32
 Deny from 85.105.65.145/32
-Deny from 85.106.120.120/32
+Deny from 85.105.201.226/32
+Deny from 85.105.209.152/32
+Deny from 85.105.245.0/24
+Deny from 85.106.245.85/32
 Deny from 85.107.179.238/32
+Deny from 85.108.197.134/32
+Deny from 85.108.247.235/32
 Deny from 85.110.90.29/32
-Deny from 85.111.25.113/32
 Deny from 85.112.32.0/19
 Deny from 85.112.178.97/32
 Deny from 85.113.32.0/19
@@ -11994,6 +12018,7 @@ Deny from 88.147.128.0/17
 Deny from 88.149.223.65/32
 Deny from 88.150.128.0/17
 Deny from 88.151.72.0/21
+Deny from 88.151.96.0/21
 Deny from 88.151.240.0/21
 Deny from 88.152.0.0/15
 Deny from 88.160.0.0/11
@@ -12039,18 +12064,33 @@ Deny from 88.218.216.0/22
 Deny from 88.218.224.0/22
 Deny from 88.218.239.0/24
 Deny from 88.221.0.0/16
-Deny from 88.226.111.249/32
-Deny from 88.230.89.224/32
-Deny from 88.237.55.13/32
-Deny from 88.242.109.80/32
+Deny from 88.224.16.208/32
+Deny from 88.226.105.64/32
+Deny from 88.228.71.129/32
+Deny from 88.228.250.133/32
+Deny from 88.229.3.215/32
+Deny from 88.230.100.161/32
+Deny from 88.230.108.80/32
+Deny from 88.230.137.161/32
+Deny from 88.231.58.11/32
+Deny from 88.231.62.197/32
+Deny from 88.233.209.62/32
+Deny from 88.234.22.156/32
+Deny from 88.237.112.43/32
+Deny from 88.243.193.167/32
+Deny from 88.244.35.102/32
+Deny from 88.245.64.65/32
+Deny from 88.246.130.133/32
 Deny from 88.247.9.171/32
 Deny from 88.247.31.189/32
-Deny from 88.247.250.91/32
+Deny from 88.247.165.215/32
 Deny from 88.248.23.216/32
 Deny from 88.248.55.136/32
-Deny from 88.249.29.232/32
+Deny from 88.249.223.70/32
 Deny from 88.250.250.47/32
-Deny from 88.251.35.110/32
+Deny from 88.252.93.244/32
+Deny from 88.252.107.181/32
+Deny from 88.254.12.214/32
 Deny from 89.16.160.0/19
 Deny from 89.17.192.0/19
 Deny from 89.18.160.0/19
@@ -12787,6 +12827,7 @@ Deny from 91.215.180.0/22
 Deny from 91.216.3.0/24
 Deny from 91.216.10.0/24
 Deny from 91.216.34.0/23
+Deny from 91.216.44.0/24
 Deny from 91.216.93.0/24
 Deny from 91.216.104.0/24
 Deny from 91.216.106.0/24
@@ -13527,6 +13568,7 @@ Deny from 94.122.144.0/20
 Deny from 94.124.88.0/21
 Deny from 94.124.117.0/24
 Deny from 94.124.118.0/23
+Deny from 94.125.176.0/21
 Deny from 94.125.185.0/24
 Deny from 94.125.243.0/24
 Deny from 94.126.32.0/22
@@ -13795,20 +13837,17 @@ Deny from 94.255.76.0/22
 Deny from 94.255.82.0/24
 Deny from 94.255.94.0/24
 Deny from 94.255.106.0/24
-Deny from 95.0.66.0/24
-Deny from 95.1.142.161/32
-Deny from 95.1.152.230/32
+Deny from 95.0.66.46/32
+Deny from 95.0.66.109/32
 Deny from 95.6.41.63/32
-Deny from 95.7.89.73/32
+Deny from 95.6.64.145/32
+Deny from 95.7.3.112/32
+Deny from 95.7.74.58/32
+Deny from 95.8.90.107/32
 Deny from 95.9.113.12/32
 Deny from 95.9.194.13/32
-Deny from 95.10.226.231/32
-Deny from 95.12.113.0/24
 Deny from 95.12.115.169/32
-Deny from 95.12.117.54/32
-Deny from 95.12.122.106/32
-Deny from 95.12.126.0/24
-Deny from 95.12.127.234/32
+Deny from 95.12.126.0/23
 Deny from 95.24.0.0/13
 Deny from 95.32.0.0/16
 Deny from 95.37.0.0/16
@@ -14421,6 +14460,9 @@ Deny from 101.1.28.0/23
 Deny from 101.1.30.0/24
 Deny from 101.2.176.0/20
 Deny from 101.16.0.0/12
+Deny from 101.32.0.0/18
+Deny from 101.32.64.0/19
+Deny from 101.32.96.0/20
 Deny from 101.36.0.0/18
 Deny from 101.36.64.0/20
 Deny from 101.36.128.0/17
@@ -19113,6 +19155,9 @@ Deny from 123.177.0.0/16
 Deny from 123.178.0.0/15
 Deny from 123.180.0.0/14
 Deny from 123.184.0.0/13
+Deny from 123.194.181.72/32
+Deny from 123.194.231.55/32
+Deny from 123.195.114.74/32
 Deny from 123.196.0.0/16
 Deny from 123.197.0.0/17
 Deny from 123.206.0.0/15
@@ -22198,7 +22243,7 @@ Deny from 170.225.188.0/22
 Deny from 170.225.230.0/23
 Deny from 170.225.246.0/23
 Deny from 170.226.39.0/24
-Deny from 170.231.80.0/22
+Deny from 170.231.80.0/21
 Deny from 170.231.168.0/22
 Deny from 170.233.144.0/22
 Deny from 170.238.187.0/24
@@ -23277,6 +23322,7 @@ Deny from 177.67.88.0/22
 Deny from 177.67.112.0/20
 Deny from 177.68.22.172/32
 Deny from 177.68.255.48/32
+Deny from 177.71.32.0/20
 Deny from 177.71.128.0/17
 Deny from 177.72.240.0/21
 Deny from 177.80.193.200/32
@@ -23320,6 +23366,7 @@ Deny from 177.188.71.144/32
 Deny from 177.190.128.0/22
 Deny from 177.190.148.0/22
 Deny from 177.194.216.169/32
+Deny from 177.221.224.0/20
 Deny from 177.223.48.0/20
 Deny from 177.223.192.0/19
 Deny from 177.234.136.0/21
@@ -23647,6 +23694,7 @@ Deny from 180.150.228.0/24
 Deny from 180.150.230.0/23
 Deny from 180.152.0.0/13
 Deny from 180.160.0.0/12
+Deny from 180.176.173.3/32
 Deny from 180.178.32.0/19
 Deny from 180.178.128.0/21
 Deny from 180.178.137.0/24
@@ -24884,7 +24932,7 @@ Deny from 185.90.136.0/22
 Deny from 185.90.152.0/23
 Deny from 185.90.160.0/22
 Deny from 185.90.192.0/22
-Deny from 185.90.232.0/22
+Deny from 185.90.232.0/21
 Deny from 185.91.52.0/22
 Deny from 185.91.76.0/22
 Deny from 185.91.120.0/22
@@ -26807,6 +26855,7 @@ Deny from 188.211.32.0/19
 Deny from 188.211.64.0/18
 Deny from 188.211.128.0/19
 Deny from 188.211.169.0/24
+Deny from 188.211.170.0/23
 Deny from 188.211.176.0/20
 Deny from 188.211.192.0/19
 Deny from 188.212.34.0/23
@@ -27918,6 +27967,7 @@ Deny from 193.28.95.0/24
 Deny from 193.28.182.0/24
 Deny from 193.28.191.0/24
 Deny from 193.28.202.0/24
+Deny from 193.28.231.0/24
 Deny from 193.28.237.0/24
 Deny from 193.28.251.0/24
 Deny from 193.29.12.0/24
@@ -27962,7 +28012,7 @@ Deny from 193.33.138.0/23
 Deny from 193.34.49.0/24
 Deny from 193.34.50.0/24
 Deny from 193.34.76.0/22
-Deny from 193.34.134.0/24
+Deny from 193.34.134.0/23
 Deny from 193.34.144.0/23
 Deny from 193.34.180.0/23
 Deny from 193.34.206.0/24
@@ -28186,6 +28236,7 @@ Deny from 193.142.40.0/22
 Deny from 193.142.58.0/23
 Deny from 193.142.132.0/22
 Deny from 193.142.146.0/23
+Deny from 193.142.153.0/24
 Deny from 193.142.200.0/22
 Deny from 193.142.215.0/24
 Deny from 193.142.244.0/24
@@ -29429,6 +29480,7 @@ Deny from 195.190.28.0/24
 Deny from 195.190.96.0/19
 Deny from 195.190.131.0/24
 Deny from 195.190.146.0/24
+Deny from 195.190.192.0/19
 Deny from 195.191.12.0/23
 Deny from 195.191.22.0/23
 Deny from 195.191.26.0/23
@@ -29438,12 +29490,14 @@ Deny from 195.191.92.0/23
 Deny from 195.191.114.0/23
 Deny from 195.191.188.0/23
 Deny from 195.191.234.0/23
+Deny from 195.200.66.0/23
 Deny from 195.200.80.0/22
 Deny from 195.200.94.0/23
 Deny from 195.200.192.0/24
 Deny from 195.200.210.0/24
 Deny from 195.200.215.0/24
 Deny from 195.200.230.0/23
+Deny from 195.200.232.0/23
 Deny from 195.201.0.0/16
 Deny from 195.202.192.0/18
 Deny from 195.206.0.0/19
@@ -29474,6 +29528,7 @@ Deny from 195.216.164.0/22
 Deny from 195.216.172.0/22
 Deny from 195.216.180.0/23
 Deny from 195.216.184.0/22
+Deny from 195.216.208.0/23
 Deny from 195.216.246.0/23
 Deny from 195.218.128.0/17
 Deny from 195.219.232.0/24
@@ -29494,6 +29549,7 @@ Deny from 195.230.92.0/24
 Deny from 195.230.117.0/24
 Deny from 195.231.0.0/18
 Deny from 195.231.64.0/19
+Deny from 195.234.26.0/23
 Deny from 195.234.98.0/23
 Deny from 195.234.108.0/22
 Deny from 195.234.124.0/24
@@ -29526,6 +29582,7 @@ Deny from 195.245.124.0/22
 Deny from 195.245.200.0/23
 Deny from 195.245.211.0/24
 Deny from 195.246.120.0/23
+Deny from 195.246.199.0/24
 Deny from 195.246.232.0/23
 Deny from 195.248.70.0/24
 Deny from 195.248.73.0/24
@@ -31073,7 +31130,6 @@ Deny from 203.205.188.0/24
 Deny from 203.205.191.0/24
 Deny from 203.205.193.0/24
 Deny from 203.205.194.0/23
-Deny from 203.205.208.0/22
 Deny from 203.205.218.0/23
 Deny from 203.205.220.0/22
 Deny from 203.205.224.0/24
@@ -32273,11 +32329,12 @@ Deny from 211.152.0.0/18
 Deny from 211.152.64.0/19
 Deny from 211.152.128.0/22
 Deny from 211.152.132.0/23
-Deny from 211.152.136.0/23
+Deny from 211.152.136.0/22
 Deny from 211.152.144.0/22
 Deny from 211.152.148.0/23
 Deny from 211.152.152.0/22
 Deny from 211.152.156.0/24
+Deny from 211.152.158.0/23
 Deny from 211.152.160.0/19
 Deny from 211.154.0.0/19
 Deny from 211.154.52.0/22
@@ -32570,9 +32627,11 @@ Deny from 212.142.0.0/18
 Deny from 212.146.180.0/24
 Deny from 212.147.208.0/22
 Deny from 212.154.128.0/17
-Deny from 212.156.30.106/32
+Deny from 212.156.64.10/32
 Deny from 212.156.86.0/24
+Deny from 212.156.90.54/32
 Deny from 212.156.146.50/32
+Deny from 212.156.149.38/32
 Deny from 212.158.160.0/21
 Deny from 212.158.169.0/24
 Deny from 212.158.172.0/24
@@ -32812,6 +32871,10 @@ Deny from 213.210.73.0/24
 Deny from 213.210.82.0/23
 Deny from 213.210.112.0/24
 Deny from 213.211.64.0/18
+Deny from 213.214.96.0/24
+Deny from 213.214.101.0/24
+Deny from 213.214.103.0/24
+Deny from 213.214.107.0/24
 Deny from 213.214.112.0/22
 Deny from 213.214.116.0/23
 Deny from 213.214.120.0/21
@@ -33196,6 +33259,7 @@ Deny from 217.26.80.0/20
 Deny from 217.26.144.0/20
 Deny from 217.28.72.0/21
 Deny from 217.29.68.0/23
+Deny from 217.30.13.0/24
 Deny from 217.30.14.0/24
 Deny from 217.30.64.0/20
 Deny from 217.30.112.0/20
@@ -35991,6 +36055,7 @@ Deny from 2804:1d40::/32
 Deny from 2804:2520::/32
 Deny from 2804:266c::/32
 Deny from 2804:2a88:10::/48
+Deny from 2804:31fc::/32
 Deny from 2804:3cb8::/32
 Deny from 2804:3fe4::/32
 Deny from 2804:428c::/32
@@ -36172,6 +36237,7 @@ Deny from 2a01:198:ff00::/40
 Deny from 2a01:230::/47
 Deny from 2a01:230:2::/48
 Deny from 2a01:238::/32
+Deny from 2a01:270::/32
 Deny from 2a01:300::/29
 Deny from 2a01:320::/29
 Deny from 2a01:348::/32
@@ -36202,6 +36268,7 @@ Deny from 2a01:e00::/26
 Deny from 2a01:4020::/32
 Deny from 2a01:41a0::/32
 Deny from 2a01:4660::/32
+Deny from 2a01:47c1::/32
 Deny from 2a01:4ce0:61::/48
 Deny from 2a01:4ce0:161::/48
 Deny from 2a01:4d60::/32
