--- a/htaccess/.htaccess
+++ b/htaccess/.htaccess
@@ -1,6 +1,6 @@
 # CIDRAM default signature files converted to htaccess format.
 # Source: https://github.com/CIDRAM/Exports/tree/master/htaccess
-# This file last updated: 2022.06.22
+# This file last updated: 2022.06.24
 #
 Order Allow,Deny
 Deny from 0.0.0.0/8
@@ -54,6 +54,7 @@ Deny from 1.32.59.217/32
 Deny from 1.32.128.0/18
 Deny from 1.34.93.0/24
 Deny from 1.37.81.0/24
+Deny from 1.43.109.124/32
 Deny from 1.52.168.0/24
 Deny from 1.52.206.0/24
 Deny from 1.52.235.0/24
@@ -115,6 +116,7 @@ Deny from 1.179.152.0/24
 Deny from 1.179.180.0/24
 Deny from 1.180.156.219/32
 Deny from 1.180.156.226/32
+Deny from 1.181.109.14/32
 Deny from 1.187.246.0/24
 Deny from 1.189.209.123/32
 Deny from 1.189.209.178/32
@@ -2203,6 +2205,13 @@ Deny from 27.7.249.249/32
 Deny from 27.19.30.0/24
 Deny from 27.38.32.0/24
 Deny from 27.38.210.0/24
+Deny from 27.45.108.85/32
+Deny from 27.45.108.112/32
+Deny from 27.45.109.0/24
+Deny from 27.45.110.0/23
+Deny from 27.45.112.0/21
+Deny from 27.45.120.168/32
+Deny from 27.45.121.137/32
 Deny from 27.46.43.14/32
 Deny from 27.46.43.87/32
 Deny from 27.46.43.197/32
@@ -5858,6 +5867,7 @@ Deny from 45.159.188.0/22
 Deny from 45.159.204.0/22
 Deny from 45.159.220.0/22
 Deny from 45.159.224.0/21
+Deny from 45.161.236.0/22
 Deny from 45.163.29.0/24
 Deny from 45.163.30.0/24
 Deny from 45.164.20.0/22
@@ -5865,6 +5875,7 @@ Deny from 45.166.32.0/22
 Deny from 45.166.108.0/23
 Deny from 45.166.111.0/24
 Deny from 45.170.12.0/22
+Deny from 45.170.128.0/22
 Deny from 45.170.245.0/24
 Deny from 45.170.246.0/23
 Deny from 45.170.248.0/22
@@ -6682,6 +6693,9 @@ Deny from 49.156.113.191/32
 Deny from 49.156.122.238/32
 Deny from 49.156.160.0/19
 Deny from 49.169.248.76/32
+Deny from 49.182.36.243/32
+Deny from 49.191.195.14/32
+Deny from 49.195.118.162/32
 Deny from 49.204.77.190/32
 Deny from 49.204.92.82/32
 Deny from 49.204.113.162/32
@@ -8428,6 +8442,9 @@ Deny from 63.133.218.0/24
 Deny from 63.134.192.0/18
 Deny from 63.135.96.0/19
 Deny from 63.135.164.0/23
+Deny from 63.135.166.0/24
+Deny from 63.135.168.0/23
+Deny from 63.135.170.0/24
 Deny from 63.140.32.0/21
 Deny from 63.140.48.0/22
 Deny from 63.140.54.0/23
@@ -10138,6 +10155,7 @@ Deny from 76.77.144.0/20
 Deny from 76.91.4.48/32
 Deny from 76.102.116.126/32
 Deny from 76.105.144.104/32
+Deny from 76.132.34.62/32
 Deny from 76.161.62.94/32
 Deny from 76.162.0.0/15
 Deny from 76.164.192.0/19
@@ -10303,7 +10321,7 @@ Deny from 77.83.2.0/24
 Deny from 77.83.4.0/22
 Deny from 77.83.8.0/22
 Deny from 77.83.24.0/21
-Deny from 77.83.37.0/24
+Deny from 77.83.36.0/23
 Deny from 77.83.44.0/23
 Deny from 77.83.64.0/22
 Deny from 77.83.70.0/23
@@ -13350,7 +13368,8 @@ Deny from 91.149.215.0/24
 Deny from 91.149.218.0/23
 Deny from 91.149.221.0/24
 Deny from 91.149.222.0/23
-Deny from 91.149.224.0/22
+Deny from 91.149.224.0/23
+Deny from 91.149.226.0/24
 Deny from 91.149.231.0/24
 Deny from 91.149.232.0/23
 Deny from 91.149.234.193/32
@@ -13522,6 +13541,7 @@ Deny from 91.203.76.0/22
 Deny from 91.203.108.0/22
 Deny from 91.203.144.0/22
 Deny from 91.203.212.0/22
+Deny from 91.203.224.0/24
 Deny from 91.203.232.0/23
 Deny from 91.203.235.0/24
 Deny from 91.204.14.0/23
@@ -19528,6 +19548,7 @@ Deny from 114.69.246.25/32
 Deny from 114.69.246.99/32
 Deny from 114.69.246.100/32
 Deny from 114.69.246.115/32
+Deny from 114.78.22.135/32
 Deny from 114.84.179.0/24
 Deny from 114.85.110.0/24
 Deny from 114.86.221.0/24
@@ -20377,6 +20398,7 @@ Deny from 120.83.80.0/22
 Deny from 120.83.84.0/23
 Deny from 120.85.97.235/32
 Deny from 120.85.104.0/22
+Deny from 120.85.142.0/23
 Deny from 120.86.232.0/21
 Deny from 120.86.240.145/32
 Deny from 120.86.248.0/21
@@ -20650,6 +20672,7 @@ Deny from 122.255.76.0/22
 Deny from 123.13.56.0/21
 Deny from 123.13.120.0/24
 Deny from 123.13.123.0/24
+Deny from 123.14.64.0/18
 Deny from 123.16.15.0/24
 Deny from 123.16.55.0/24
 Deny from 123.16.188.0/24
@@ -20836,6 +20859,7 @@ Deny from 124.153.64.0/18
 Deny from 124.156.0.0/16
 Deny from 124.157.0.0/18
 Deny from 124.158.160.0/20
+Deny from 124.194.74.203/32
 Deny from 124.195.176.215/32
 Deny from 124.195.199.0/24
 Deny from 124.204.33.0/24
@@ -22145,6 +22169,7 @@ Deny from 143.244.220.0/22
 Deny from 143.249.155.0/24
 Deny from 143.253.0.0/16
 Deny from 143.255.56.0/22
+Deny from 143.255.140.0/22
 Deny from 144.2.32.0/19
 Deny from 144.2.154.0/24
 Deny from 144.2.170.0/24
@@ -22934,10 +22959,8 @@ Deny from 152.204.128.46/32
 Deny from 152.204.128.190/32
 Deny from 152.228.128.0/17
 Deny from 152.249.2.57/32
-Deny from 152.249.170.97/32
-Deny from 152.249.233.249/32
+Deny from 152.254.148.239/32
 Deny from 152.254.162.225/32
-Deny from 152.254.244.241/32
 Deny from 153.14.0.0/16
 Deny from 153.52.0.0/14
 Deny from 153.85.0.0/16
@@ -26104,7 +26127,6 @@ Deny from 176.250.88.161/32
 Deny from 177.9.74.47/32
 Deny from 177.11.48.0/21
 Deny from 177.11.80.0/22
-Deny from 177.27.244.174/32
 Deny from 177.34.12.89/32
 Deny from 177.34.12.221/32
 Deny from 177.44.88.0/24
@@ -26114,7 +26136,8 @@ Deny from 177.54.2.134/32
 Deny from 177.54.144.0/20
 Deny from 177.62.185.228/32
 Deny from 177.62.240.2/32
-Deny from 177.63.248.120/32
+Deny from 177.63.242.135/32
+Deny from 177.63.242.203/32
 Deny from 177.64.119.132/32
 Deny from 177.65.128.0/24
 Deny from 177.65.159.163/32
@@ -26123,8 +26146,7 @@ Deny from 177.65.159.237/32
 Deny from 177.65.159.251/32
 Deny from 177.67.114.0/24
 Deny from 177.67.116.0/24
-Deny from 177.68.25.0/24
-Deny from 177.68.60.173/32
+Deny from 177.68.25.40/32
 Deny from 177.69.19.49/32
 Deny from 177.69.20.106/32
 Deny from 177.69.45.188/32
@@ -26160,10 +26182,10 @@ Deny from 177.93.48.0/24
 Deny from 177.93.50.2/32
 Deny from 177.93.50.50/32
 Deny from 177.93.50.162/32
+Deny from 177.96.150.16/32
+Deny from 177.99.235.85/32
 Deny from 177.101.109.99/32
 Deny from 177.101.125.251/32
-Deny from 177.102.198.203/32
-Deny from 177.103.236.41/32
 Deny from 177.106.19.0/24
 Deny from 177.125.64.0/21
 Deny from 177.126.160.0/19
@@ -26172,12 +26194,11 @@ Deny from 177.130.140.0/22
 Deny from 177.130.151.0/24
 Deny from 177.130.156.0/22
 Deny from 177.130.189.0/24
+Deny from 177.135.83.0/24
 Deny from 177.137.16.0/24
 Deny from 177.137.31.0/24
 Deny from 177.138.28.89/32
-Deny from 177.138.34.8/32
-Deny from 177.139.130.157/32
-Deny from 177.139.130.175/32
+Deny from 177.139.130.0/24
 Deny from 177.141.148.120/32
 Deny from 177.142.32.11/32
 Deny from 177.142.32.251/32
@@ -26196,6 +26217,8 @@ Deny from 177.154.128.0/19
 Deny from 177.184.224.0/23
 Deny from 177.184.232.0/23
 Deny from 177.184.236.0/22
+Deny from 177.192.109.17/32
+Deny from 177.192.109.78/32
 Deny from 177.195.238.129/32
 Deny from 177.195.238.248/32
 Deny from 177.200.206.167/32
@@ -26609,7 +26632,7 @@ Deny from 179.63.32.0/20
 Deny from 179.98.82.63/32
 Deny from 179.104.42.0/24
 Deny from 179.108.123.210/32
-Deny from 179.111.167.77/32
+Deny from 179.111.216.44/32
 Deny from 179.111.216.102/32
 Deny from 179.113.56.134/32
 Deny from 179.113.56.248/32
@@ -26634,6 +26657,17 @@ Deny from 179.157.4.0/24
 Deny from 179.159.130.49/32
 Deny from 179.159.130.135/32
 Deny from 179.159.130.187/32
+Deny from 179.162.18.86/32
+Deny from 179.162.18.184/32
+Deny from 179.177.56.115/32
+Deny from 179.177.130.95/32
+Deny from 179.178.239.222/32
+Deny from 179.179.10.217/32
+Deny from 179.183.29.194/32
+Deny from 179.184.23.197/32
+Deny from 179.184.123.77/32
+Deny from 179.184.196.184/32
+Deny from 179.184.230.194/32
 Deny from 179.188.0.0/17
 Deny from 179.188.128.0/18
 Deny from 179.188.192.0/23
@@ -26654,10 +26688,12 @@ Deny from 179.217.203.14/32
 Deny from 179.220.5.244/32
 Deny from 179.220.12.26/32
 Deny from 179.220.13.239/32
-Deny from 179.228.5.252/32
+Deny from 179.228.130.28/32
+Deny from 179.228.225.6/32
 Deny from 179.232.67.32/32
 Deny from 179.235.219.193/32
 Deny from 179.245.190.0/24
+Deny from 179.247.246.67/32
 Deny from 179.247.246.203/32
 Deny from 180.74.68.223/32
 Deny from 180.75.243.113/32
@@ -26906,6 +26942,20 @@ Deny from 181.113.225.174/32
 Deny from 181.113.225.178/32
 Deny from 181.114.212.163/32
 Deny from 181.114.240.0/20
+Deny from 181.115.128.0/23
+Deny from 181.115.131.0/24
+Deny from 181.115.132.0/24
+Deny from 181.115.133.61/32
+Deny from 181.115.133.187/32
+Deny from 181.115.133.246/32
+Deny from 181.115.134.0/23
+Deny from 181.115.136.79/32
+Deny from 181.115.136.173/32
+Deny from 181.115.137.63/32
+Deny from 181.115.138.56/32
+Deny from 181.115.144.182/32
+Deny from 181.115.186.10/32
+Deny from 181.115.232.14/32
 Deny from 181.117.128.14/32
 Deny from 181.117.128.38/32
 Deny from 181.117.128.121/32
@@ -29972,6 +30022,7 @@ Deny from 186.190.214.0/23
 Deny from 186.190.220.0/22
 Deny from 186.190.226.0/24
 Deny from 186.194.82.0/24
+Deny from 186.200.22.146/32
 Deny from 186.202.0.0/17
 Deny from 186.202.128.0/18
 Deny from 186.202.192.0/23
@@ -29983,6 +30034,8 @@ Deny from 186.207.237.186/32
 Deny from 186.207.237.241/32
 Deny from 186.209.21.218/32
 Deny from 186.211.197.0/24
+Deny from 186.213.233.16/32
+Deny from 186.213.244.209/32
 Deny from 186.218.3.33/32
 Deny from 186.223.144.104/32
 Deny from 186.225.12.0/24
@@ -30007,6 +30060,10 @@ Deny from 186.234.124.0/23
 Deny from 186.234.127.0/24
 Deny from 186.234.128.0/18
 Deny from 186.234.224.0/22
+Deny from 186.239.58.158/32
+Deny from 186.239.134.158/32
+Deny from 186.239.155.106/32
+Deny from 186.239.167.154/32
 Deny from 186.249.144.0/20
 Deny from 186.249.192.31/32
 Deny from 186.249.192.33/32
@@ -30016,9 +30073,9 @@ Deny from 187.0.201.0/24
 Deny from 187.0.205.0/24
 Deny from 187.0.210.0/24
 Deny from 187.0.214.0/24
-Deny from 187.10.78.23/32
-Deny from 187.11.126.0/24
-Deny from 187.11.232.71/32
+Deny from 187.8.168.140/32
+Deny from 187.9.149.114/32
+Deny from 187.10.157.148/32
 Deny from 187.16.255.69/32
 Deny from 187.17.64.0/18
 Deny from 187.19.64.0/20
@@ -30031,7 +30088,6 @@ Deny from 187.33.25.0/24
 Deny from 187.33.26.0/24
 Deny from 187.33.28.0/24
 Deny from 187.33.30.0/24
-Deny from 187.35.107.176/32
 Deny from 187.36.64.105/32
 Deny from 187.37.121.236/32
 Deny from 187.44.1.0/24
@@ -30042,19 +30098,27 @@ Deny from 187.45.184.0/22
 Deny from 187.45.188.0/23
 Deny from 187.45.190.0/24
 Deny from 187.45.192.0/18
-Deny from 187.56.186.227/32
-Deny from 187.56.187.57/32
+Deny from 187.50.136.210/32
+Deny from 187.50.213.154/32
+Deny from 187.51.73.2/32
+Deny from 187.56.80.44/32
 Deny from 187.56.187.138/32
+Deny from 187.57.167.65/32
+Deny from 187.58.15.170/32
+Deny from 187.58.129.159/32
+Deny from 187.58.135.42/32
 Deny from 187.60.0.0/20
 Deny from 187.62.100.134/32
 Deny from 187.62.100.149/32
 Deny from 187.67.249.230/32
 Deny from 187.72.143.118/32
 Deny from 187.72.172.109/32
-Deny from 187.75.41.20/32
-Deny from 187.75.49.0/24
+Deny from 187.75.49.135/32
 Deny from 187.75.159.195/32
 Deny from 187.75.209.247/32
+Deny from 187.86.122.245/32
+Deny from 187.92.167.106/32
+Deny from 187.92.188.146/32
 Deny from 187.94.104.226/32
 Deny from 187.94.105.79/32
 Deny from 187.94.106.58/32
@@ -30065,6 +30129,8 @@ Deny from 187.102.12.169/32
 Deny from 187.102.13.212/32
 Deny from 187.107.11.0/24
 Deny from 187.110.192.0/20
+Deny from 187.115.3.186/32
+Deny from 187.115.186.142/32
 Deny from 187.120.113.0/24
 Deny from 187.122.26.25/32
 Deny from 187.122.105.181/32
@@ -30653,29 +30719,39 @@ Deny from 189.1.164.0/24
 Deny from 189.1.168.0/21
 Deny from 189.4.11.123/32
 Deny from 189.6.246.248/32
-Deny from 189.18.94.121/32
+Deny from 189.18.138.177/32
+Deny from 189.20.129.90/32
+Deny from 189.26.241.43/32
 Deny from 189.33.1.159/32
 Deny from 189.33.136.114/32
 Deny from 189.38.56.0/21
 Deny from 189.41.65.0/24
 Deny from 189.45.199.37/32
 Deny from 189.45.199.123/32
-Deny from 189.46.63.56/32
 Deny from 189.50.108.0/24
 Deny from 189.50.111.0/24
 Deny from 189.55.160.84/32
+Deny from 189.56.166.5/32
+Deny from 189.56.184.27/32
+Deny from 189.56.184.189/32
+Deny from 189.56.190.63/32
+Deny from 189.56.198.43/32
+Deny from 189.56.198.214/32
+Deny from 189.57.67.130/32
+Deny from 189.59.95.145/32
 Deny from 189.60.102.246/32
 Deny from 189.62.217.104/32
 Deny from 189.62.217.245/32
-Deny from 189.68.228.206/32
-Deny from 189.79.246.32/32
+Deny from 189.78.84.42/32
 Deny from 189.84.21.44/32
 Deny from 189.90.63.122/32
 Deny from 189.100.95.184/32
 Deny from 189.100.205.19/32
-Deny from 189.111.44.214/32
+Deny from 189.108.147.210/32
+Deny from 189.109.153.254/32
 Deny from 189.111.45.209/32
-Deny from 189.111.250.25/32
+Deny from 189.114.67.133/32
+Deny from 189.114.67.217/32
 Deny from 189.121.227.30/32
 Deny from 189.121.227.139/32
 Deny from 189.122.55.81/32
@@ -30853,6 +30929,10 @@ Deny from 190.128.136.6/32
 Deny from 190.128.161.174/32
 Deny from 190.128.195.74/32
 Deny from 190.128.208.206/32
+Deny from 190.129.25.10/32
+Deny from 190.129.25.245/32
+Deny from 190.129.34.188/32
+Deny from 190.129.60.0/24
 Deny from 190.131.192.0/24
 Deny from 190.131.198.0/24
 Deny from 190.131.199.197/32
@@ -30916,10 +30996,7 @@ Deny from 190.246.63.202/32
 Deny from 190.248.134.0/24
 Deny from 190.252.104.74/32
 Deny from 191.7.224.0/19
-Deny from 191.13.128.165/32
 Deny from 191.18.11.0/24
-Deny from 191.19.127.220/32
-Deny from 191.23.21.233/32
 Deny from 191.53.82.0/24
 Deny from 191.53.112.0/24
 Deny from 191.53.221.0/24
@@ -31057,10 +31134,11 @@ Deny from 191.184.203.53/32
 Deny from 191.187.128.102/32
 Deny from 191.189.17.255/32
 Deny from 191.191.135.103/32
-Deny from 191.193.115.0/24
+Deny from 191.193.115.113/32
+Deny from 191.193.115.167/32
 Deny from 191.209.21.0/24
-Deny from 191.209.27.0/24
-Deny from 191.209.127.193/32
+Deny from 191.209.27.5/32
+Deny from 191.209.27.179/32
 Deny from 191.232.16.0/21
 Deny from 191.232.32.0/19
 Deny from 191.232.64.0/20
@@ -34632,6 +34710,7 @@ Deny from 199.5.229.0/24
 Deny from 199.7.33.0/24
 Deny from 199.7.41.0/24
 Deny from 199.7.104.0/21
+Deny from 199.7.160.0/21
 Deny from 199.7.212.0/23
 Deny from 199.7.214.0/24
 Deny from 199.15.112.0/21
@@ -35135,25 +35214,34 @@ Deny from 200.142.208.0/20
 Deny from 200.143.160.0/19
 Deny from 200.146.227.146/32
 Deny from 200.147.0.0/16
-Deny from 200.148.25.132/32
-Deny from 200.148.39.63/32
-Deny from 200.153.147.0/24
+Deny from 200.148.157.4/32
+Deny from 200.148.157.6/32
+Deny from 200.153.22.134/32
 Deny from 200.155.0.0/20
 Deny from 200.155.28.0/24
 Deny from 200.155.64.0/20
+Deny from 200.159.48.45/32
 Deny from 200.170.145.9/32
+Deny from 200.175.156.236/32
+Deny from 200.175.224.131/32
 Deny from 200.187.170.140/32
 Deny from 200.187.192.0/18
 Deny from 200.188.0.0/17
 Deny from 200.189.16.0/20
 Deny from 200.189.44.0/22
 Deny from 200.198.176.0/20
+Deny from 200.205.134.87/32
 Deny from 200.219.192.0/18
 Deny from 200.220.168.0/22
 Deny from 200.220.172.0/23
 Deny from 200.221.0.0/16
 Deny from 200.225.1.203/32
 Deny from 200.226.128.0/17
+Deny from 200.232.114.219/32
+Deny from 200.232.135.46/32
+Deny from 200.232.188.67/32
+Deny from 200.232.190.30/32
+Deny from 200.232.190.57/32
 Deny from 200.234.192.0/19
 Deny from 201.0.217.0/24
 Deny from 201.6.252.49/32
@@ -35162,15 +35250,19 @@ Deny from 201.17.147.150/32
 Deny from 201.20.0.0/20
 Deny from 201.20.16.0/23
 Deny from 201.20.32.0/19
-Deny from 201.27.185.96/32
-Deny from 201.43.200.154/32
-Deny from 201.43.247.41/32
+Deny from 201.28.135.130/32
+Deny from 201.28.135.246/32
+Deny from 201.43.74.52/32
+Deny from 201.43.74.111/32
+Deny from 201.43.246.254/32
 Deny from 201.46.24.10/32
 Deny from 201.46.24.238/32
 Deny from 201.46.29.115/32
+Deny from 201.47.122.114/32
+Deny from 201.47.122.132/32
 Deny from 201.49.214.0/23
 Deny from 201.52.64.49/32
-Deny from 201.68.113.56/32
+Deny from 201.69.108.56/32
 Deny from 201.75.214.175/32
 Deny from 201.76.32.0/19
 Deny from 201.77.114.0/24
@@ -35181,10 +35273,13 @@ Deny from 201.77.119.94/32
 Deny from 201.77.120.196/32
 Deny from 201.77.124.0/24
 Deny from 201.82.6.49/32
-Deny from 201.92.40.198/32
-Deny from 201.93.122.8/32
-Deny from 201.93.159.110/32
+Deny from 201.91.82.155/32
+Deny from 201.91.181.110/32
+Deny from 201.91.226.38/32
+Deny from 201.93.159.134/32
+Deny from 201.93.159.172/32
 Deny from 201.93.159.234/32
+Deny from 201.93.249.4/32
 Deny from 201.103.21.40/32
 Deny from 201.103.21.191/32
 Deny from 201.103.21.208/32
@@ -35227,6 +35322,7 @@ Deny from 201.159.159.0/24
 Deny from 201.159.224.0/21
 Deny from 201.163.0.0/16
 Deny from 201.169.0.0/16
+Deny from 201.170.91.0/24
 Deny from 201.170.184.0/24
 Deny from 201.171.219.0/24
 Deny from 201.184.17.0/24
@@ -36574,6 +36670,9 @@ Deny from 207.246.64.0/18
 Deny from 207.246.240.0/20
 Deny from 207.248.62.98/32
 Deny from 207.248.224.0/19
+Deny from 207.254.0.0/20
+Deny from 207.254.16.0/22
+Deny from 207.254.76.0/22
 Deny from 207.254.208.0/20
 Deny from 208.9.6.0/24
 Deny from 208.12.64.0/19
@@ -36582,7 +36681,27 @@ Deny from 208.47.176.252/32
 Deny from 208.50.241.0/24
 Deny from 208.51.60.0/22
 Deny from 208.52.128.0/23
+Deny from 208.52.131.0/24
+Deny from 208.52.137.0/24
+Deny from 208.52.145.0/24
 Deny from 208.52.146.0/23
+Deny from 208.52.148.0/24
+Deny from 208.52.151.0/24
+Deny from 208.52.154.0/24
+Deny from 208.52.157.0/24
+Deny from 208.52.158.0/23
+Deny from 208.52.161.0/24
+Deny from 208.52.164.0/24
+Deny from 208.52.166.0/24
+Deny from 208.52.168.0/24
+Deny from 208.52.170.0/24
+Deny from 208.52.174.0/24
+Deny from 208.52.179.0/24
+Deny from 208.52.180.0/24
+Deny from 208.52.182.0/24
+Deny from 208.52.185.0/24
+Deny from 208.52.186.0/23
+Deny from 208.52.188.0/22
 Deny from 208.56.44.0/22
 Deny from 208.56.48.0/20
 Deny from 208.64.100.0/24
@@ -36638,7 +36757,7 @@ Deny from 208.78.4.0/22
 Deny from 208.78.24.0/21
 Deny from 208.78.40.0/22
 Deny from 208.78.83.0/24
-Deny from 208.78.96.0/21
+Deny from 208.78.96.0/20
 Deny from 208.78.216.0/21
 Deny from 208.79.45.0/24
 Deny from 208.79.47.0/24
@@ -36652,6 +36771,8 @@ Deny from 208.81.200.0/22
 Deny from 208.81.204.0/23
 Deny from 208.82.120.0/22
 Deny from 208.82.220.0/22
+Deny from 208.83.2.0/23
+Deny from 208.83.4.0/22
 Deny from 208.83.80.0/21
 Deny from 208.84.132.0/22
 Deny from 208.84.152.0/22
@@ -38001,6 +38122,9 @@ Deny from 216.122.168.0/24
 Deny from 216.122.170.0/23
 Deny from 216.122.176.0/21
 Deny from 216.122.188.0/22
+Deny from 216.126.40.0/24
+Deny from 216.126.44.0/23
+Deny from 216.126.46.0/24
 Deny from 216.126.60.0/22
 Deny from 216.126.192.0/21
 Deny from 216.126.224.0/23
@@ -38508,6 +38632,7 @@ Deny from 218.81.189.0/24
 Deny from 218.89.220.0/24
 Deny from 218.89.221.76/32
 Deny from 218.89.222.0/24
+Deny from 218.92.0.0/24
 Deny from 218.98.81.0/24
 Deny from 218.98.82.0/23
 Deny from 218.98.84.0/22
@@ -38636,6 +38761,7 @@ Deny from 220.200.184.15/32
 Deny from 220.200.184.242/32
 Deny from 220.232.173.170/32
 Deny from 220.235.218.179/32
+Deny from 220.238.159.66/32
 Deny from 220.245.169.207/32
 Deny from 220.246.94.0/24
 Deny from 220.246.100.0/24
@@ -38695,6 +38821,7 @@ Deny from 221.133.2.35/32
 Deny from 221.139.11.208/32
 Deny from 221.144.62.123/32
 Deny from 221.144.62.135/32
+Deny from 221.145.133.0/24
 Deny from 221.155.229.68/32
 Deny from 221.155.229.76/32
 Deny from 221.155.229.103/32
@@ -41739,6 +41866,7 @@ Deny from 2607:5700::/32
 Deny from 2607:5b00::/32
 Deny from 2607:5f80::/32
 Deny from 2607:6003:2305::/48
+Deny from 2607:6480::/35
 Deny from 2607:6980::/43
 Deny from 2607:6980:50b0::/44
 Deny from 2607:6980:e1a0::/44
@@ -42022,7 +42150,6 @@ Deny from 2803:d4a0::/32
 Deny from 2804:14d:3291:4e99::/64
 Deny from 2804:218::/32
 Deny from 2804:3f8:1:d::/64
-Deny from 2804:431:cff0:b97e::/64
 Deny from 2804:49c:13::/48
 Deny from 2804:49c:31::/48
 Deny from 2804:49c:3403::/48
